--- a/.daggerx/templates/mod-light/module/apis.go.tmpl
+++ b/.daggerx/templates/mod-light/module/apis.go.tmpl
@@ -25,7 +25,7 @@ import (
 //   - expand: Whether to replace `${VAR}` or $VAR in the value according to the current
 //     environment variables defined in the container (e.g., "/opt/bin:$PATH").
 //     Optional parameter.
-func (m *ModuleTemplateLight) WithEnvironmentVariable(
+func (m *{{.module_name}}) WithEnvironmentVariable(
 	// name is the name of the environment variable.
 	name string,
 	// value is the value of the environment variable.
