--- a/.daggerx/templates/mod-light/tests/install.go.tmpl
+++ b/.daggerx/templates/mod-light/tests/install.go.tmpl
@@ -20,7 +20,7 @@ import (
 func (m *Tests) TestWithUtilitiesInAlpineContainer(ctx context.Context) error {
 	// Initialize the target module with the Alpine container and utilities.
 	targetModule := dag.
-		ModuleTemplateLight()
+		{{.module_name}}()
 
 	targetModule = targetModule.WithUtilitiesInAlpineContainer()
 
