feat: Add support for caching directories in containers
Improve user experience by adding a new method `WithCachedDirectory` to mount a cache volume in the container. This allows users to cache directories in the container, which can improve performance for certain workloads.

The new method takes the following parameters:
- `path`: The path in the container where the cache volume will be mounted.
- `enablePrefixWithMountPath`: Whether to enable the prefix with the mount path.
- `setEnvVarWithCacheDirValue`: The value to set the cache directory in the container as an environment variable.

Additionally, the `WithClonedGitRepo` method has been updated to accept a `*dagger.Secret` for the `token` parameter, which allows for more secure handling of VCS tokens.

--- a/.daggerx/templates/mod-full/module/apis.go.tmpl
+++ b/.daggerx/templates/mod-full/module/apis.go.tmpl
@@ -219,7 +219,7 @@ func (m *{{.module_name}}) WithClonedGitRepo(
 	repoURL string,
 	// token is the VCS token to use for authentication. Optional parameter.
 	// +optional
-	token string,
+	token *dagger.Secret,
 	// vcs is the VCS to use for authentication. Optional parameter.
 	// +optional
 	vcs string,
@@ -280,6 +280,45 @@ func (m *{{.module_name}}) WithConfigFile(
 	if setEnvVar != "" {
 		setEnvVar = strings.ToUpper(setEnvVar)
 		m.Ctr = m.Ctr.WithEnvVariable(setEnvVar, cfgPath)
+	}
+
+	return m
+}
+
+// WithCachedDirectory mounts a cache volume in the container.
+//
+// Parameters:
+// - path: The path in the container where the cache volume will be mounted.
+// - cacheVolume: The cache volume to mount.
+func (m *{{.module_name}}) WithCachedDirectory(
+	// path is the path in the container where the cache volume will be mounted.
+	path string,
+	// enablePrefixWithMountPath is whether to enable the prefix with the mount path.
+	// +optional
+	enablePrefixWithMountPath bool,
+	// setEnvVarWithCacheDirValue is the value to set the cache directory in the container.
+	// +optional
+	setEnvVarWithCacheDirValue string,
+) *{{.module_name}} {
+	// Define the cache volume
+	cacheVolume := dag.CacheVolume(path)
+
+	// Define the path in the container
+	mountPath := path
+	if enablePrefixWithMountPath {
+		mountPath = filepath.Join(fixtures.MntPrefix, path)
+	}
+
+	// Mount the cache volume in the container
+	m.Ctr = m.Ctr.
+		WithMountedCache(mountPath, cacheVolume)
+
+	// Set the environment variable if provided
+	if setEnvVarWithCacheDirValue != "" {
+		envVarName := strings.ToUpper(strings.TrimSpace(setEnvVarWithCacheDirValue))
+		m.Ctr = m.
+			Ctr.
+			WithEnvVariable(envVarName, mountPath)
 	}
 
 	return m
