feat: Improve Git repository cloning functionality
- Add support for optional VCS token parameter
- Refactor Git clone request setup to handle VCS-specific token names
- Add helper functions to retrieve the appropriate token name and value based on the VCS type
- Update the `CloneGitRepo` method to use the new token handling logic

--- a/.daggerx/templates/mod-full/module/content.go.tmpl
+++ b/.daggerx/templates/mod-full/module/content.go.tmpl
@@ -1,6 +1,7 @@
 package main
 
 import (
+	"context"
 	"path/filepath"
 
 	"github.com/Excoriate/daggerverse/{{.module_name_pkg}}/internal/dagger"
@@ -57,7 +58,7 @@ func (m *{{.module_name}}) CloneGitRepo(
 	repoURL string,
 	// token is the VCS token to use for authentication. Optional parameter.
 	// +optional
-	token string,
+	token *dagger.Secret,
 	// vcs is the VCS to use for authentication. Optional parameter.
 	// +optional
 	vcs string,
@@ -67,22 +68,39 @@ func (m *{{.module_name}}) CloneGitRepo(
 		vcs = "github"
 	}
 
-	// Determine the token name based on the VCS.
-	var tokenName string
-	if vcs == "gitlab" {
-		tokenName = "GITLAB_TOKEN"
-	} else { // This branch handles both "github" and the default case.
-		tokenName = "GITHUB_TOKEN" //nolint:gosec // This is a constant string.
-	}
 	// Initialize the Git clone request.
 	gitCloneRequest := dag.Git(repoURL)
 
 	// If a token is provided, set it as a secret and attach it to the clone request.
-	if token != "" {
-		tokenSecret := dag.SetSecret(tokenName, token)
-		gitCloneRequest = gitCloneRequest.WithAuthToken(tokenSecret)
+	if token != nil {
+		gitCloneRequest = gitCloneRequest.
+			WithAuthToken(dag.
+				SetSecret(m.getTokenNameByVcs(vcs), m.getTokenValueBySecret(token)))
 	}
 
 	// Perform the Git clone operation and return the resulting directory.
-	return gitCloneRequest.Head().Tree()
+	return gitCloneRequest.
+		Head().
+		Tree()
+}
+
+// getTokenNameByVcs returns the appropriate token name based on the VCS type.
+// If the VCS is "gitlab", it returns "GITLAB_TOKEN". Otherwise, it returns "GITHUB_TOKEN".
+func (m *{{.module_name}}) getTokenNameByVcs(vcs string) string {
+	if vcs == "gitlab" {
+		return "GITLAB_TOKEN"
+	}
+
+	return "GITHUB_TOKEN"
+}
+
+// getTokenValueBySecret retrieves the plaintext value of the provided secret.
+// If an error occurs while retrieving the plaintext, it returns an empty string.
+func (m *{{.module_name}}) getTokenValueBySecret(secret *dagger.Secret) string {
+	plainTxtToken, err := secret.Plaintext(context.TODO())
+	if err != nil {
+		return ""
+	}
+
+	return plainTxtToken
 }
