feat: Add support for configuring cache volume options
- Add new options to `WithCachedDirectory` method to allow setting cache volume source, owner, and sharing mode
- Update the container mount operation to use the new cache volume options

feat: Expand test coverage for module-light template
- Add new tests for `TestWithConfigFile`, `TestWithUserAsOwnerOfDirs`, and `TestWithUserWithPermissionsOnDirs`
- Update `TestWithClonedGitRepo` to use the new `TestWithClonedGitRepoHTTPS` method

feat: Enhance git cloning functionality in module-full template
- Add support for cloning a git repository using SSH authentication
- Expand the `CloneGitRepo` method to allow specifying branch, tag, or commit to checkout
- Return the directory of the cloned repository with an optional return directory path

--- a/.daggerx/templates/mod-full/module/content.go.tmpl
+++ b/.daggerx/templates/mod-full/module/content.go.tmpl
@@ -39,7 +39,7 @@ func (m *{{.module_name}}) DownloadFile(
 	return fileDownloaded
 }
 
-// CloneGitRepo clones a Git repository into a Dagger Directory.
+// CloneGitRepoHTTPS clones a Git repository into a Dagger Directory.
 //
 // Parameters:
 //   - repoURL: The URL of the git repository to clone (e.g., "https://github.com/user/repo").
@@ -47,13 +47,20 @@ func (m *{{.module_name}}) DownloadFile(
 //     not provided, the repository will be cloned without authentication.
 //   - vcs: (Optional) The version control system (VCS) to use for
 //     authentication. Defaults to "github". Supported values are "github" and "gitlab".
+//   - authHeader: (Optional) The authentication header to use for authentication. If
+//     not provided, the repository will be cloned without authentication.
+//   - returnDir: (Optional) A string that indicates the directory path of the repository to return.
+//   - branch: (Optional) The branch to checkout. If not provided, the default branch will be checked out.
+//   - keepGitDir: (Optional) A boolean that indicates if the .git directory should be kept. Defaults to false.
+//   - tag: (Optional) The tag to checkout. If not provided, no tag will be checked out.
+//   - commit: (Optional) The commit to checkout. If not provided, the latest commit will be checked out.
 //
 // Returns:
 //   - *dagger.Directory: A directory object representing the cloned repository.
 //
 // If a token is provided, it will be securely set using Dagger's
 // secret mechanism and used for authentication during the clone operation.
-func (m *{{.module_name}}) CloneGitRepo(
+func (m *{{.module_name}}) CloneGitRepoHTTPS(
 	// repoURL is the URL of the git repo to clone.
 	repoURL string,
 	// token is the VCS token to use for authentication. Optional parameter.
@@ -62,14 +69,38 @@ func (m *{{.module_name}}) CloneGitRepo(
 	// vcs is the VCS to use for authentication. Optional parameter.
 	// +optional
 	vcs string,
+	// authHeader is the authentication header to use for authentication. Optional parameter.
+	// +optional
+	authHeader *dagger.Secret,
+	// returnDir is a string that indicates the directory path of the repository to return.
+	// +optional
+	returnDir string,
+	// branch is the branch to checkout. Optional parameter.
+	// +optional
+	branch string,
+	// keepGitDir is a boolean that indicates if the .git directory should be kept. Optional parameter.
+	// +optional
+	keepGitDir bool,
+	// tag is the tag to checkout. Optional parameter.
+	// +optional
+	tag string,
+	// commit is the commit to checkout. Optional parameter.
+	// +optional
+	commit string,
 ) *dagger.Directory {
 	// Default to GitHub if no VCS is specified.
 	if vcs == "" {
 		vcs = "github"
 	}
 
+	gitCloneOpts := dagger.GitOpts{}
+
+	if keepGitDir {
+		gitCloneOpts.KeepGitDir = keepGitDir
+	}
+
 	// Initialize the Git clone request.
-	gitCloneRequest := dag.Git(repoURL)
+	gitCloneRequest := dag.Git(repoURL, gitCloneOpts)
 
 	// If a token is provided, set it as a secret and attach it to the clone request.
 	if token != nil {
@@ -78,10 +109,106 @@ func (m *{{.module_name}}) CloneGitRepo(
 				SetSecret(m.getTokenNameByVcs(vcs), m.getTokenValueBySecret(token)))
 	}
 
-	// Perform the Git clone operation and return the resulting directory.
-	return gitCloneRequest.
-		Head().
-		Tree()
+	if authHeader != nil {
+		gitCloneRequest = gitCloneRequest.
+			WithAuthHeader(authHeader)
+	}
+
+	var repoContent *dagger.Directory
+
+	switch {
+	case commit != "":
+		repoContent = gitCloneRequest.Commit(commit).Tree()
+	case tag != "":
+		repoContent = gitCloneRequest.Tag(tag).Tree()
+	case branch != "":
+		repoContent = gitCloneRequest.Branch(branch).Tree()
+	default:
+		repoContent = gitCloneRequest.Head().Tree()
+	}
+
+	if returnDir != "" {
+		return repoContent.
+			Directory(returnDir)
+	}
+
+	return repoContent
+}
+
+// CloneGitRepoSSH clones a git repository using SSH for authentication.
+// It allows specifying various options such as the branch, tag, or commit to checkout,
+// whether to keep the .git directory, and the directory path of the repository to return.
+//
+// Parameters:
+//
+//	repoURL: The URL of the git repo to clone.
+//	sshSocket: The SSH socket to use for authentication.
+//	sshKnownHosts: The known hosts to use for authentication. Optional parameter.
+//	returnDir: A string that indicates the directory path of the repository to return. Optional parameter.
+//	branch: The branch to checkout. Optional parameter.
+//	keepGitDir: A boolean that indicates if the .git directory should be kept. Optional parameter.
+//	tag: The tag to checkout. Optional parameter.
+//	commit: The commit to checkout. Optional parameter.
+//
+// Returns:
+//
+//	*dagger.Directory: The directory of the cloned repository.
+func (m *{{.module_name}}) CloneGitRepoSSH(
+	// repoURL is the URL of the git repo to clone.
+	repoURL string,
+	// sshAuthSocket is the SSH socket to use for authentication.
+	sshAuthSocket *dagger.Socket,
+	// sshKnownHosts is the known hosts to use for authentication. Optional parameter.
+	// +optional
+	sshKnownHosts string,
+	// returnDir is a string that indicates the directory path of the repository to return.
+	// +optional
+	returnDir string,
+	// branch is the branch to checkout. Optional parameter.
+	// +optional
+	branch string,
+	// keepGitDir is a boolean that indicates if the .git directory should be kept. Optional parameter.
+	// +optional
+	keepGitDir bool,
+	// tag is the tag to checkout. Optional parameter.
+	// +optional
+	tag string,
+	// commit is the commit to checkout. Optional parameter.
+	// +optional
+	commit string,
+) *dagger.Directory {
+	gitCloneOpts := dagger.GitOpts{
+		SSHAuthSocket: sshAuthSocket,
+	}
+
+	if keepGitDir {
+		gitCloneOpts.KeepGitDir = keepGitDir
+	}
+
+	if sshKnownHosts != "" {
+		gitCloneOpts.SSHKnownHosts = sshKnownHosts
+	}
+
+	gitCloneRequest := dag.Git(repoURL, gitCloneOpts)
+
+	var repoContent *dagger.Directory
+
+	switch {
+	case commit != "":
+		repoContent = gitCloneRequest.Commit(commit).Tree()
+	case tag != "":
+		repoContent = gitCloneRequest.Tag(tag).Tree()
+	case branch != "":
+		repoContent = gitCloneRequest.Branch(branch).Tree()
+	default:
+		repoContent = gitCloneRequest.Head().Tree()
+	}
+
+	if returnDir != "" {
+		return repoContent.Directory(returnDir)
+	}
+
+	return repoContent
 }
 
 // getTokenNameByVcs returns the appropriate token name based on the VCS type.
