feat: Update Dagger engine and Docker versions
This commit updates the default versions of the Dagger engine and Docker engine used in the Dagger module and test code.

The changes include:
- Updating the default Dagger engine version from "v0.13.0" to "v0.13.7"
- Updating the Dagger engine version used in the test suite from "v0.13.0" to "v0.13.6" and "v0.13.7"
- Updating the default Docker engine version from "24.0" to "24.0"

These changes ensure that the module and tests are using the latest stable versions of the Dagger engine and Docker engine, which may include bug fixes and performance improvements.

--- a/.daggerx/templates/mod-light/module/golang.go.tmpl
+++ b/.daggerx/templates/mod-light/module/golang.go.tmpl
@@ -44,6 +44,45 @@ func (m *{{.module_name}}) WithGoPlatform(
 	return m
 }
 
+// WithGoGCCCompilerAlpine installs the GCC compiler and musl-dev package
+// in the container environment using the Alpine package manager (apk).
+//
+// This method is useful for enabling the Go toolchain to compile C code
+// and link against C libraries, which is necessary for certain Go packages
+// that rely on CGO.
+//
+// Returns:
+// - *{{.module_name}}: A pointer to the updated {{.module_name}} instance.
+func (m *{{.module_name}}) WithGoGCCCompilerAlpine() *{{.module_name}} {
+	m.Ctr = m.Ctr.
+		WithExec(
+			[]string{"apk", "add", "--no-cache", "gcc", "musl-dev"},
+		)
+
+	return m
+}
+
+// WithGoGCCCompilerUbuntu installs the GCC compiler and musl-dev package
+// in the container environment using the Ubuntu package manager (apt-get).
+//
+// This method is useful for enabling the Go toolchain to compile C code
+// and link against C libraries, which is necessary for certain Go packages
+// that rely on CGO.
+//
+// Returns:
+// - *{{.module_name}}: A pointer to the updated {{.module_name}} instance.
+func (m *{{.module_name}}) WithGoGCCCompilerUbuntu() *{{.module_name}} {
+	m.Ctr = m.Ctr.
+		WithExec(
+			[]string{"apt-get", "update", "-y"},
+		).
+		WithExec(
+			[]string{"apt-get", "install", "-y", "gcc", "musl-dev"},
+		)
+
+	return m
+}
+
 // WithGoCgoEnabled enables CGO for the container environment.
 //
 // When CGO is enabled, the Go toolchain will allow the use of cgo, which
