--- a/.daggerx/templates/github/workflows/mod-template-ci.yaml.tmpl
+++ b/.daggerx/templates/github/workflows/mod-template-ci.yaml.tmpl
@@ -22,14 +22,14 @@ defaults:
         working-directory: {{.module_name_pkg}}
 
 env:
-    DAGGER_VERSION_EXAMPLES_GO: 0.13.7
+    DAGGER_VERSION_EXAMPLES_GO: 0.14.0
 
 jobs:
     dagger-linter:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.13.6, 0.13.7]
+                dagversion: [0.14.0]
         name: Lint {{.module_name_pkg}} on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
@@ -162,7 +162,7 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.13.6, 0.13.7]
+                dagversion: [0.14.0]
         needs: [dagger-linter, golangci-lint]
         name: Run Tests 🧪 in {{.module_name_pkg}} on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
