--- a/.daggerx/templates/github/workflows/mod-template-ci.yaml.tmpl
+++ b/.daggerx/templates/github/workflows/mod-template-ci.yaml.tmpl
@@ -1,15 +1,20 @@
 ---
-name: CI {{.module_name_pkg}} 🧹
+name: CI {{.module_name_pkg}} 📦
 on:
     push:
         branches:
             - main
             - master
         paths:
-            - {{.module_name_pkg}}/**/*.go
+            - {{.module_name_pkg}}/**
+            - {{.module_name_pkg}}/tests/**
+            - {{.module_name_pkg}}/examples/go/**
     pull_request:
         paths:
-            - {{.module_name_pkg}}/**/*.go
+            - {{.module_name_pkg}}/**
+            - {{.module_name_pkg}}/tests/**
+            - {{.module_name_pkg}}/examples/go/**
+            - .github/workflows/ci-mod-{{.module_name_pkg}}.yml
     workflow_dispatch:
 
 permissions:
@@ -17,214 +22,194 @@ permissions:
     pull-requests: read
     checks: write
 
-defaults:
-    run:
-        working-directory: {{.module_name_pkg}}
-
 env:
-    DAGGER_VERSION_EXAMPLES_GO: 0.14.0
+    GO_VERSION: "1.22"
+    DAGGER_VERSION: 0.14.0
+    GOLANGCI_LINT_VERSION: v1.62.0
 
 jobs:
-    dagger-linter:
+    dagger-build:
         strategy:
             matrix:
-                go: ['1.22']
-                dagversion: [0.14.0]
-        name: Lint {{.module_name_pkg}} on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
+                module: [{{.module_name_pkg}}]
+            fail-fast: true
+        name: 🏗️ Build ${{ matrix.module }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-go@v5
               with:
-                  go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
+                  go-version: ${{ env.GO_VERSION }}
+            - name: 📦 Dagger Develop Main Module
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: {{.module_name_pkg}}
-                  version: ${{ matrix.dagversion }}
+                  module: ${{ matrix.module }}
+                  version: ${{ env.DAGGER_VERSION }}
                   cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+            - name: 🧪 Dagger Develop Test Module
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: {{.module_name_pkg}}/tests
-                  version: ${{ matrix.dagversion }}
+                  module: ${{ matrix.module }}/tests
+                  version: ${{ env.DAGGER_VERSION }}
                   cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Develop on Examples Module for Go 📄 with Dagger ${{ matrix.dagversion }}
+            - name: 📄 Dagger Develop Examples Module
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
-                  module: {{.module_name_pkg}}/examples/go
-                  version: ${{ matrix.dagversion }}
+                  module: ${{ matrix.module }}/examples/go
+                  version: ${{ env.DAGGER_VERSION }}
                   cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Dagger Call on Module 📦 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
+    dagger-list-functions:
+        needs: dagger-build
+        strategy:
+            matrix:
+                module: [{{.module_name_pkg}}]
+            fail-fast: false
+        name: 📞 Call Functions in ${{ matrix.module }}
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-go@v5
               with:
-                  verb: call
-                  module: {{.module_name_pkg}}
-                  version: ${{ matrix.dagversion }}
+                  go-version: ${{ env.GO_VERSION }}
+            - name: 📦 List Main Module Functions
+              uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+              with:
+                  verb: functions
+                  module: ${{ matrix.module }}
+                  version: ${{ env.DAGGER_VERSION }}
                   cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
+            - name: 🧪 List Test Module Functions
+              uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
               with:
-                  verb: call
-                  module: {{.module_name_pkg}}/tests
-                  version: ${{ matrix.dagversion }}
+                  verb: functions
+                  module: ${{ matrix.module }}/tests
+                  version: ${{ env.DAGGER_VERSION }}
                   cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Call on Test Examples/Go Module 📄 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
+            - name: 📄 List Example Module Functions
+              uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+              with:
+                  verb: functions
+                  module: ${{ matrix.module }}/examples/go
+                  version: ${{ env.DAGGER_VERSION }}
+                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    run-tests:
+        needs: dagger-build
+        strategy:
+            matrix:
+                module: [{{.module_name_pkg}}]
+            fail-fast: false
+        name: 🧪 Run Tests for ${{ matrix.module }}
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-go@v5
+              with:
+                  go-version: ${{ env.GO_VERSION }}
+            - name: 💣 Run All Tests
+              uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
               with:
                   verb: call
-                  module: {{.module_name_pkg}}/examples/go
-                  version: ${{ matrix.dagversion }}
+                  args: test-all
+                  module: ${{ matrix.module }}/tests
+                  version: ${{ env.DAGGER_VERSION }}
+                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    run-recipes:
+        needs: dagger-build
+        strategy:
+            matrix:
+                module: [{{.module_name_pkg}}]
+            fail-fast: false
+        name: 🥗 Run Recipes for ${{ matrix.module }}
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-go@v5
+              with:
+                  go-version: ${{ env.GO_VERSION }}
+            - name: 🥗 Run All Example Recipes
+              uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+              with:
+                  verb: call
+                  args: all-recipes
+                  module: ${{ matrix.module }}/examples/go
+                  version: ${{ env.DAGGER_VERSION }}
                   cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     golangci-lint:
+        needs: dagger-build
         strategy:
             matrix:
-                go: ['1.22']
-        name: GolangCI-Lint for {{.module_name_pkg}}
+                module: [{{.module_name_pkg}}]
+            fail-fast: false
+        name: 🔍 Lint ${{ matrix.module }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-go@v5
               with:
-                  go-version: ${{ matrix.go }}
-
-      # Dagger main module 📦 (develop & golang ci-lint)
-            - name: Dagger Develop on Module 📦 {{.module_name_pkg}} with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: {{.module_name_pkg}}
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-          # Install golangci-lint using curl
-            - name: Install golangci-lint
+                  go-version: ${{ env.GO_VERSION }}
+            - name: 🔧 Install Dagger CLI
               run: |
-                curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
+                curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} BIN_DIR=/usr/local/bin sudo -E sh
+                dagger version
+            - name: 🔧 Install golangci-lint
+              run: |
+                curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
                 sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
-
-            - name: Run golangci-lint on {{.module_name_pkg}} 📦
+            - name: 🚀 Dagger Develop Main Module
               run: |
+                dagger develop
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: 📝 Run lint on Main Module
+              run: |
+                ls -ltrah && \
                 golangci-lint run --config=../.golangci.yml --verbose
-
-      # Dagger test module 🧪 (develop & golang ci-lint)
-            - name: Dagger Develop on Module tests 🧪 {{.module_name_pkg}} with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: {{.module_name_pkg}}/tests
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Run golangci-lint on {{.module_name_pkg}}/tests 🧪
+            - name: 🚀 Dagger Develop Test Module
               run: |
-                cd tests
-                ls -ltrah
-                golangci-lint run --config=../../.golangci.yml --verbose
-
-      # Dagger examples (go) module 📄 (develop & golang ci-lint)
-            - name: Dagger Develop on Module Examples/Go 📄 {{.module_name_pkg}} with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: {{.module_name_pkg}}/examples/go
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+                cd tests && ls -ltrah && \
+                dagger develop
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Run golangci-lint on {{.module_name_pkg}}/examples/go 📄 (develop & golang ci-lint)
+            - name: 📝 Run lint on Test Module
+              run: |
+                cd tests && ls -ltrah && \
+                golangci-lint run --config=../../.golangci.yml --verbose
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: 🚀 Dagger Develop Example Module
               run: |
                 cd examples/go
-                ls -ltrah
+                dagger develop
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: 📝 Run lint on Example Module
+              run: |
+                cd examples/go && ls -ltrah && \
                 golangci-lint run --config=../../../.golangci.yml --verbose
-
-    {{.module_name_pkg}}-test:
-        strategy:
-            matrix:
-                go: ['1.22']
-                dagversion: [0.14.0]
-        needs: [dagger-linter, golangci-lint]
-        name: Run Tests 🧪 in {{.module_name_pkg}} on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-go@v5
-              with:
-                  go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module 📦 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: {{.module_name_pkg}}
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: {{.module_name_pkg}}/tests
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Tests 💣 in {{.module_name_pkg}} on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: call
-                  args: test-all
-                  module: {{.module_name_pkg}}/tests
-                  version: ${{ matrix.dagversion }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    {{.module_name_pkg}}-recipes-go:
-        needs: [dagger-linter, golangci-lint]
-        name: Run recipes 🥗 in {{.module_name_pkg}}/examples/go on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-go@v5
-              with:
-                  go-version: '1.22'
-            - name: Dagger Develop on Module Examples 📄
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: develop
-                  module: {{.module_name_pkg}}/examples/go
-                  version: ${{ env.DAGGER_VERSION_EXAMPLES_GO }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Recipes all recipes 💣 in {{.module_name_pkg}}/examples/go
-              uses: dagger/dagger-for-github@v6
-              with:
-                  verb: call
-                  args: all-recipes
-                  module: {{.module_name_pkg}}/examples/go
-                  version: ${{ env.DAGGER_VERSION_EXAMPLES_GO }}
-                  cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
